--- a/gerrit-code-burndown/index.html
+++ b/gerrit-code-burndown/index.html
@@ -40,7 +40,7 @@
             data.addRows(input_files);
 
             var options = {
-                title: 'Nova Mox Burndown Chart',
+                title: 'Nova Mox Burndown Chart - Files',
                 hAxis: {title: 'Date', titleTextStyle: {color: '#333'}},
                 vAxis: {minValue: 0}
             };
@@ -50,12 +50,12 @@
 
             var data = new google.visualization.DataTable();
             data.addColumn('date', 'Date');
-            data.addColumn('number', 'Number of files importing mox');
+            data.addColumn('number', 'Number of lines using mox');
 
             data.addRows(input_lines);
 
             var options = {
-                title: 'Nova Mox Burndown Chart',
+                title: 'Nova Mox Burndown Chart - Lines',
                 hAxis: {title: 'Date', titleTextStyle: {color: '#333'}},
                 vAxis: {minValue: 0}
             };
